--- a/views/contact.hbs
+++ b/views/contact.hbs
@@ -1,4 +1,4 @@
- <nav class="navbar navbar-expand-md navbar-expand-lg navbar-expand-xl navbar-dark green-gradient">
+ <nav class="navbar navbar-expand-md navbar-expand-lg navbar-expand-xl aqua-gradient-rgba">
         <!-- <div class="container"> -->
         <a class="navbar-brand" href="/home">Eric Willard</a>
 
