--- a/views/education.hbs
+++ b/views/education.hbs
@@ -1,5 +1,5 @@
 <!--Start Nav-->
-<nav class="navbar navbar-expand-md navbar-expand-lg navbar-expand-xl aqua-gradient-rgba">
+<nav class="navbar navbar-expand-md navbar-expand-lg navbar-expand-xl stylish-color">
     <a class="navbar-brand" href="/home">Eric Willard</a>
 
     <!-- Social Media Contact Links-->
@@ -63,6 +63,6 @@
 
 
 
-<footer class="footer aqua-gradient-rgba">
+<footer class="footer stylish-color">
     © Copyright 2019 Eric Willard
 </footer>
