--- a/views/webPort.hbs
+++ b/views/webPort.hbs
@@ -1,5 +1,5 @@
 <!--Start Nav-->
-<nav class="navbar navbar-expand-md navbar-expand-lg navbar-expand-xl aqua-gradient-rgba">
+<nav class="navbar navbar-expand-md navbar-expand-lg navbar-expand-xl peach-gradient-rgba">
     <a class="navbar-brand" href="/home">Eric Willard</a>
 
     <!-- Social Media Contact Links-->
@@ -142,6 +142,6 @@
 
 
 
-<footer class="footer aqua-gradient-rgba">
+<footer class="footer peach-gradient-rgba">
     © Copyright 2019 Eric Willard
 </footer>
