--- a/views/education.hbs
+++ b/views/education.hbs
@@ -59,6 +59,54 @@
 
 <!--End Navbar-->
 
+<!--Education History Panels-->
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4">
+
+            <!--Left Column Panel-->
+            <!--Kansas University-->
+            <div class="card" style="max-width: 100%; max-height:100%; background-color: white; border: solid lightgray 1px;">
+                <img class="card-img-top img-fluid" id="jayhawklogo" src="../Images/jayhawklogo.jpg">
+                <div class="card-body">
+                    <p id="kuinfo">
+
+                    </p>
+                </div>
+            </div>    
+        </div>
+        <!--End KU Panel-->
+
+        <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4">
+
+            <!--Middle Column Panel-->
+            <!--Start UCSD Panel-->
+            <div class="card" style="max-width: 100%; max-height:100%; background-color: white; border: solid lightgray 1px;">
+                <img class="card-img-top img-fluid" id="ucsdlogo" src="../Images/UCSD-logo.png">
+                    <div class="card-body">
+                        <p id="ucsdinfo">
+
+                        </p>
+                    </div>
+            </div>
+        </div>
+        <!--End UCSD Panel-->
+
+        <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4">
+
+        <!--Right Column Panel-->
+        <!--Start Fullerton College Panel-->
+        <div class="card" style="max-width: 100%; max-height:100%; background-color: white; border: solid lightgray 1px;">
+                <img class="card-img-top img-fluid" id="fullcolllogo" src="../Images/fullcolllogo.jpg">
+                    <div class="card-body">
+                        <p id="ucsdinfo">
+
+                        </p>
+                    </div>
+            </div>
+        </div>
+        <!--End Fullerton College Panel-->
+
 
 
 
