--- a/views/home.hbs
+++ b/views/home.hbs
@@ -58,7 +58,7 @@
 <!--Nav Panels-->
 <div class="container-fluid">
     <div class="row top-panels">
-        <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3 col-xl-3">
+        <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3 col-xl-3" style="margin-top: 190px;">
 
             <!--Left Column Top-->
             <!--Web Development-->
@@ -138,7 +138,7 @@
 
 
         <!--Video Panel-->
-        <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3 col-xl-3">
+        <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3 col-xl-3" style="margin-top: -190px;">
             <!--Video Panel-->
             <div class="card" style="max-width: 100%; background-color: white; border: solid lightgray 1px;"><a href="/video">
                     <img class="card-img-top"><iframe style="width: -webkit-fill-available;" height="251px" src="https://www.youtube.com/embed/rEEGPJSIeHE" frameborder="10" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
