--- a/views/contact.hbs
+++ b/views/contact.hbs
@@ -1,9 +1,8 @@
  <nav class="navbar navbar-expand-md navbar-expand-lg navbar-expand-xl aqua-gradient-rgba">
-        <!-- <div class="container"> -->
         <a class="navbar-brand" href="/home">Eric Willard</a>
 
         <!-- Social Media Contact Links-->
-    <ul class="navbar-collapse justify-content-between mr-auto list-inline">
+        <ul class="navbar-collapse justify-content-between mr-auto list-inline">
         <li class="nav-item navbar-center list-inline-item">
             <a href="https://www.linkedin.com/in/willarderic/">
                 <img src="Images/linkedin.png" alt="linkedin" class="linkedin" style="height: 55px; width: 55px;">
@@ -40,11 +39,9 @@
             </a>
         </li>
     </ul>
-        <!-- Collapsible content -->
-        <div class="collapse navbar-collapse" id="navbarSupportedContent"></div>
 
         <!-- Links -->
-        <ul class="navbar-nav navbar-right list-inline">
+        <ul class="navbar-nav mr-auto navbar-right list-inline" style="margin-left: 30px;">
             <li class="nav-item list-item-inline">
                 <a class="nav-link" href="/home">Home</a>
             </li>
@@ -59,7 +56,7 @@
         <!-- links -->
 
         </div>
-        <!-- </div> -->
+        
     </nav>
     <div class="container-fluid">
         <!-- <div class="row main-content"> -->
