--- a/views/home.hbs
+++ b/views/home.hbs
@@ -41,7 +41,7 @@
         </li>
     </ul>
     <!-- Links -->
-    <ul class="navbar-nav mr-auto list-inline">
+    <ul class="navbar-nav mr-auto navbar-right list-inline" style="margin-left: 30px;">
         <li class="nav-item list-item-inline">
             <a class="nav-link" href="/home">Home</a>
         </li>
