--- a/views/video.hbs
+++ b/views/video.hbs
@@ -1,5 +1,5 @@
 <!--Start Nav-->
-<nav class="navbar navbar-expand-md navbar-expand-lg navbar-expand-xl elegant-color-rgba">
+<nav class="navbar navbar-expand-md navbar-expand-lg navbar-expand-xl elegant-color">
     <a class="navbar-brand" href="/home">Eric Willard</a>
 
     <!-- Social Media Contact Links-->
@@ -42,7 +42,7 @@
     </ul>
 
     <!-- Links -->
-    <ul class="navbar-nav navbar-right list-inline">
+    <ul class="navbar-nav mr-auto navbar-right list-inline" style="margin-left: 30px;">
         <li class="nav-item list-item-inline">
             <a class="nav-link" href="/home">Home
             </a>
@@ -63,6 +63,6 @@
 
 
 
-<footer class="footer elegant-color-rgba">
+<footer class="footer elegant-color">
     © Copyright 2019 Eric Willard
 </footer>
