--- a/views/webPort.hbs
+++ b/views/webPort.hbs
@@ -42,7 +42,7 @@
     </ul>
 
     <!-- Links -->
-    <ul class="navbar-nav navbar-right list-inline">
+    <ul class="navbar-nav mr-auto navbar-right list-inline" style="margin-left: 30px;">
         <li class="nav-item list-item-inline">
             <a class="nav-link" href="/home">Home
             </a>
