--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -26,7 +26,7 @@
     <link href="/css/style.css" rel="stylesheet">
     
     <!-- Bootstrap CDN -->
-    <!-- <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"> -->
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link href="../MDB/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="../MDB/css/mdb.min.css">
     <link rel="stylesheet" type="text/css" href="../MDB/css/style.css">
