--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -16,18 +16,18 @@
     <link href="https://fonts.googleapis.com/css?family=Acme&display=swap" rel="stylesheet">
 
     <!-- Material Design Bootstrap -->
-    <link href="/MDB/css/mdb.min.css" rel="stylesheet">
+    <!-- <link href="/MDB/css/mdb.min.css" rel="stylesheet">
     <link rel='stylesheet' id='ajax-auth-style-css' href='https://mdbootstrap.com/wp-content/themes/mdbootstrap4/css/ajax-auth-style.css?ver=4.8.2'
         type='text/css' media='all' />
     <link rel='stylesheet' id='compiled.css-css' href='https://mdbootstrap.com/wp-content/themes/mdbootstrap4/css/compiled.min.css?ver=4.4.0'
-        type='text/css' media='all' />
+        type='text/css' media='all' /> -->
     
     <!-- Your custom styles (optional) -->
     <link href="/css/style.css" rel="stylesheet">
     
-    <!-- Bootstrap CDN -->
+    <!-- Bootstrap & Material Design Bootstrap -->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <link href="../MDB/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="../MDB/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="../MDB/css/mdb.min.css">
     <link rel="stylesheet" type="text/css" href="../MDB/css/style.css">
     
@@ -35,25 +35,17 @@
     <link href="https://opensource.keycdn.com/fontawesome/4.7.0/font-awesome.min.css" rel="stylesheet">
        
     <!-- Handlebars -->
-    <!-- <script rel="stylesheet" type="text/hbs" src="/views/landing.hbs"></script> -->
     <script type="text/hbs" rel="stylesheet" src="/views/home.hbs"></script>
-    <!-- <script rel="stylesheet" type="text/hbs" src="/views/signin.hbs"></script>
-    <script rel="stylesheet" type="text/hbs" src="/views/singup.hbs"></script> --> 
-
-
+ 
     <!-- Ajax CDN -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
     <!-- jquery CDN -->
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
         crossorigin="anonymous"></script>
-
-    <!-- Google Maps API -->
-    <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDrHCqj9IrGhkxjk1NwrpOZLuW8PlH-Kxo&callback=initMap" async
-        defer></script> --> 
     
     <!-- Wikipedia API -->
-    <link rel="EditURI" type="application/rsd+xml" href="https://wikitravel.org/wiki/en/api.php?action=rsd"/>
+    <!-- <link rel="EditURI" type="application/rsd+xml" href="https://wikitravel.org/wiki/en/api.php?action=rsd"/> -->
     
     <!-- Javascript files -->
     <script rel="stylesheet" src="/js/app.js" type="text/javascript"></script>
