pretty much finished with experience page

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -65,7 +65,7 @@
             <a href="/webPort">
             <div class="card" style="max-width: 100%; max-height: 100%; background-color: white; border: solid lightgray 1px;">
                     <img class="card-img-top" id="WebDevSS" src="../Images/clicktripUI.png">
-                    <div class="card-body">
+                    <div class="card-title">
                         <p id="card-text">Web Development<i class="glyphicon glyphicon-globe"></i></p>
                     </div>
             </div></a>
@@ -81,7 +81,7 @@
             <a href="/experience">
             <div class="card" style="max-width: 100%; max-height: 100%; background-color: white; border: solid lightgray 1px;">
                     <img class="card-img-top" id="experiencePic" src="../Images/CNBacktoSchool1.jpg">
-                    <div class="card-body">
+                    <div class="card-title">
                         <p id="card-text">Experience<i class="glyphicon glyphicon-ok"></i></p>
                     </div>
             </div></a>
@@ -98,7 +98,7 @@
             <a href="/education">
             <div class="card" style="max-width: 100%; max-height: 100%; background-color: white; border: solid lightgray 1px;">
                     <img class="card-img-top" id="gradPic" src="../Images/Graduation-UCSD-Me.jpg">
-                    <div class="card-body">
+                    <div class="card-title">
                         <p id="card-text">Education<i class="glyphicon glyphicon-education"></i></p>
                     </div>
             </div></a>
@@ -116,7 +116,7 @@
                     <img class="card-img-top" id="meShooting" src="../Images/FranceMeIrelandRV.jpg">
                     <!-- <div class="panel panel-header">
                     </div> -->
-                    <div class="card-body">
+                    <div class="card-title">
                         <p id="card-text">Photography<i class="glyphicon glyphicon-camera"></i></p>
                     </div>
             </div></a>
@@ -129,7 +129,7 @@
             <div class="card" style="max-width: 100%; max-height: 100%; background-color: white; border: solid lightgray 1px;"><a href="/skills">
                     <img class="card-img-top" id="skillsPic" src="../Images/skillsPic.jpg">
 
-                    <div class="card-body">
+                    <div class="card-title">
                         <p id="card-text">Skills<i class="glyphicon glyphicon-star"></i></p>
                     </div>
             </div></a>
@@ -143,7 +143,7 @@
             <div class="card" style="max-width: 100%; background-color: white; border: solid lightgray 1px;"><a href="/video">
                     <img class="card-img-top"><iframe style="width: -webkit-fill-available;" height="251px" src="https://www.youtube.com/embed/rEEGPJSIeHE" frameborder="10" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-                    <div class="card-body">
+                    <div class="card-title">
                         <p id="card-text">Video<i class="glyphicon glyphicon-facetime-video"></i></p>
                     </div>
             </div></a>
