--- a/public/css/style.css
+++ b/public/css/style.css
@@ -132,8 +132,12 @@ div.container-fluid {
 	font-style: bold;
 }
 .card-body {
-	font-size: 25pt;
-	text-align: -webkit-center;
+	font-size: 20pt;
+	text-align: left;
+}
+.card-title {
+	font-size: 30pt;
+	text-align: center;
 }
 .card-text {
 	font-size: 20px !important;
