--- a/views/experience.hbs
+++ b/views/experience.hbs
@@ -58,8 +58,50 @@
 </nav>
 <!--End Navbar-->
 
+<!--Start Top Row-->
 
+<div class="container-fluid">
+    <div class="row"
+        <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 col-xl-6">
+            <div class="card" style="max-width: 100%; max-height: 100%; background-color: white; border: solid lightgray 1px;">
+                <img class="card-img-top img-fluid" id="zjutlogo" src="../Images/zjutlogo.png">
+                    <div class="card-title">
+                        Zhejiang University of Technology/浙江工业大学
+                        <br/>
+                        Hangzhou, China
+                    </div>
+                        <div class="card-body">
+                            <ul style="style-list-type:disc;">
+                                <li>Professor - English & Web Development</li>
+                                <li>May 2018-May 2019</li>
+                                <li>I taught a total of 160 university students the basics of web development in English.  Langauges covered were primarily HTML5, CSS3, Javascript, and JQuery.  It was important for the students to learn both coding and the eseentials of English concurrently as one cannot code in Chinese.
+                                </li>
+                            </ul>
+                        </div>
+            </div>
+        </div>
+        <!--End Zhejiang University Panel-->
 
+        <!--Start KU Panel-->
+        <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 col-xl-6">
+            <div class="card" style="max-width: 100%; max-height: 100%; background-color: white; border: solid lightgray 1px;">
+                <img class="card-img-top img-fluid" id="jayhawklogo" src="../Images/jayhawklogo.jpg">
+                    <div class="card-title">
+                        Kansas University
+                    </div>
+                        <div class="card-body">
+                            <ul style="style-list-type:disc;">
+                                <li>Student - Full-Stack Web Development Program</li>
+                                <li>June 2017-May 2018</li>
+                                <li>This program consisted of roughly 52 weeks of learning the essentials of full-stack web development.  As the course progressed students built upon what they learned and our projects became increasingly more complex.  Beyond a regular coding program, we had already completed several individual and group projects prior to the end of the course so that we had as close to real-world experience as possible.
+                                </li>
+                            </ul>
+                        </div>
+            </div>
+        </div>
+        <!--End KU Panel
+    </div>
+</div>
 
 
 <footer class="footer aqua-gradient-rgba">
