pretty much finished with experience page

--- a/views/experience.hbs
+++ b/views/experience.hbs
@@ -99,7 +99,7 @@
                         </div>
             </div>
         </div>
-        <!--End KU Panel
+        <!--End KU Panel-->
     </div>
 </div>
 
