fixed one small problem with list style

--- a/views/education.hbs
+++ b/views/education.hbs
@@ -92,7 +92,7 @@
                         University of California San Diego
                     </div>
                         <div class="card-body">
-                            <ul style="style-list-type:disc;">
+                            <ul style="list-style-type:disc;">
                                 <li>Bachelor of Arts</li>
                                 <li>September 2012-August 2014</li>
                                 <li>My studies at UCSD consisted heavily of languages, history, and politics.  I studied German and French throughout my tenure at UCSD while also obtaining a minor certification in international relations.</li>
@@ -112,7 +112,7 @@
                         Fullerton College
                     </div>    
                         <div class="card-body">
-                            <ul style="style-list-type:disc;">
+                            <ul style="list-style-type:disc;">
                                 <li>Associate in Arts in Film</li>
                                 <li>January 2009-May 2012</li>
                                 <li>At Fullerton College I was proud to obtain both President's List and Dean's list status during 2/3 of my studies at the institution.  I majored in Film, but also studied German, French, and Spanish as well as single-handedly produce a video to promote the Study Abroad Department.  In consecutive years I studied both in Paris, France and Berlin, Germany which bolstered my language skills in addition to providing me with a better understanding of foreign culture.</li>  
