--- a/views/experience.hbs
+++ b/views/experience.hbs
@@ -71,7 +71,7 @@
                         Hangzhou, China
                     </div>
                         <div class="card-body">
-                            <ul style="style-list-type:disc;">
+                            <ul style="list-style-type:disc;">
                                 <li>Professor - English & Web Development</li>
                                 <li>May 2018-May 2019</li>
                                 <li>I taught a total of 160 university students the basics of web development in English.  Langauges covered were primarily HTML5, CSS3, Javascript, and JQuery.  It was important for the students to learn both coding and the eseentials of English concurrently as one cannot code in Chinese.
@@ -90,7 +90,7 @@
                         Kansas University
                     </div>
                         <div class="card-body">
-                            <ul style="style-list-type:disc;">
+                            <ul style="list-style-type:disc;">
                                 <li>Student - Full-Stack Web Development Program</li>
                                 <li>June 2017-May 2018</li>
                                 <li>This program consisted of roughly 52 weeks of learning the essentials of full-stack web development.  As the course progressed students built upon what they learned and our projects became increasingly more complex.  Beyond a regular coding program, we had already completed several individual and group projects prior to the end of the course so that we had as close to real-world experience as possible.
