--- a/views/experience.hbs
+++ b/views/experience.hbs
@@ -61,14 +61,12 @@
 <!--Start Top Row-->
 
 <div class="container-fluid">
-    <div class="row"
+    <div class="row">
         <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 col-xl-6">
             <div class="card" style="max-width: 100%; max-height: 100%; background-color: white; border: solid lightgray 1px;">
                 <img class="card-img-top img-fluid" id="zjutlogo" src="../Images/zjutlogo.png">
                     <div class="card-title">
                         Zhejiang University of Technology/浙江工业大学
-                        <br/>
-                        Hangzhou, China
                     </div>
                         <div class="card-body">
                             <ul style="list-style-type:disc;">
