--- a/public/css/style.css
+++ b/public/css/style.css
@@ -359,6 +359,10 @@ footer {
 	max-width: 100%;
 	max-height: 470px;
 }
+#zjutlogo {
+	max-height: 470px;
+	max-width: 100%;
+}
 .wrapper {
 	width: 100%;
 	padding: 0;
