--- a/views/photo.hbs
+++ b/views/photo.hbs
@@ -152,7 +152,97 @@
     </div>
 
     <!--Start New (2nd) Row-->
+    <div class="row">
+        <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3 col-xl-3">
 
+        <!--Start Red Hat girl Panel-->
+        <div class="card" style="max-width: 100%; max-height: 100%; background-color: white; border: solid lightgray 1px;">
+
+            <!--Hover Description-->
+            <div class="view overlay" id="redHatDesc">
+                <img class="card-img-top img-fluid" id="redHat" src="../Images/KoreanHat.jpg">
+                    <div class="mask flex-center rgba-blue-strong">
+                        <p class="white-text">
+                            A friend of mine with her back turned to the camera wearing a bright red hat.
+                        </p>
+                    </div>
+            </div>
+            <!--End Hover Description-->
+
+            <div class="card-title">
+                Chapeau Rouge
+            </div>
+        </div>
+        </div>
+        <!--End Red Hat Girl Panel-->
+
+        <!--Start Horseshoe Canyon Panel-->
+        <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3 col-xl-3">
+            <div class="card" style="max-width: 100%; background-color: white; border: solid lightgray 1px;">
+
+                <!--Hover description-->
+                <div class="view overlay" id="HorseshoeInfo">
+                    <img class="card-img-top img-fluid" id="HorseShoe" src="../Images/AZHSBHDR.jpg">
+                        <div class="mask flex-center rgba-blue-strong">
+                            <p class="white-text">
+                                Located near the famous Antelope Canyon this spot is known as Horseshoe Bend in northern Arizona.
+                            </p>
+                        </div>
+                </div>
+                <!--End Hover Description-->
+
+                <div class="card-title">
+                    Horseshoe Bend
+                </div>
+            </div>
+        </div>
+        <!--End Horseshoe Canyon Panel-->
+
+        <!--Start Tron Panel-->
+        <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3 col-xl-3">
+            <div class="card" style="max-width: 100%; background-color: white; border: solid lightgray 1px;">
+
+                <!--Hover description-->
+                <div class="view overlay" id="TronInfo">
+                    <img class="card-img-top img-fluid" id="Tron" src="../Images/CNTron.jpg">
+                        <div class="mask flex-center rgba-blue-strong">
+                            <p class="white-text">
+                                A building named the "White Horse Convention Center" in Hangzhou, China is illuminated in a way that invokes memories of the movie Tron.
+                            </p>
+                        </div>
+                </div>
+                <!--End Hover Description-->
+
+                <div class="card-title">
+                    Tron
+                </div>
+            </div>
+        </div>
+        <!--End Tron Panel-->
+
+        <!--Start Washing Machine-->
+        <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3 col-xl-3">
+            <div class="card" style="max-width: 100%; background-color: white; border: solid lightgray 1px;">
+
+                <!--Hover description-->
+                <div class="view overlay" id="KanzleramtInfo">
+                    <img class="card-img-top img-fluid" id="Kanzler" src="../Images/BerlinWashingMachineRV.jpg">
+                        <div class="mask flex-center rgba-blue-strong">
+                            <p class="white-text">
+                                The Bundeskanzleramt in Berlin, Germany where the Chancellor of Germany works.  This part of the building is known as the "Washing Machine" due to its circular nature.
+                            </p>
+                        </div>
+                </div>
+                <!--End Hover Description-->
+
+                <div class="card-title">
+                    The Washing Machine
+                </div>
+            </div>
+        </div>
+        <!--End Washing Machine Panel-->
+    </div>
+    <!--End 2nd Row-->
 
 
 </div>
