--- a/views/photo.hbs
+++ b/views/photo.hbs
@@ -59,7 +59,7 @@
 
 <!--End Navbar-->
 <div class="container-fluid">
-    <div class="row">
+    <div class="row" style="margin-bottom: 300px;">
 
         <!--Shellhaus Photo-->
         <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3 col-xl-3">
@@ -153,7 +153,7 @@
 
     <!--Start New (2nd) Row-->
     <div class="row">
-        <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3 col-xl-3">
+        <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3 col-xl-3" style="margin-top: -290px">
 
         <!--Start Red Hat girl Panel-->
         <div class="card" style="max-width: 100%; max-height: 100%; background-color: white; border: solid lightgray 1px;">
@@ -199,7 +199,7 @@
         <!--End Horseshoe Canyon Panel-->
 
         <!--Start Tron Panel-->
-        <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3 col-xl-3">
+        <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3 col-xl-3" style="margin-top: -290px">
             <div class="card" style="max-width: 100%; background-color: white; border: solid lightgray 1px;">
 
                 <!--Hover description-->
@@ -221,7 +221,7 @@
         <!--End Tron Panel-->
 
         <!--Start Washing Machine-->
-        <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3 col-xl-3">
+        <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3 col-xl-3" style="margin-top: -290px">
             <div class="card" style="max-width: 100%; background-color: white; border: solid lightgray 1px;">
 
                 <!--Hover description-->
@@ -244,7 +244,98 @@
     </div>
     <!--End 2nd Row-->
 
+    <!--Start 3rd row-->
+    <div class="row">
+        <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3 col-xl-3">
 
+        <!--Start Groningen Panel-->
+        <div class="card" style="max-width: 100%; max-height: 100%; background-color: white; border: solid lightgray 1px;">
+
+            <!--Hover Description-->
+            <div class="view overlay" id="GroningenDesc">
+                <img class="card-img-top img-fluid" id="Groningen" src="../Images/NLGroningenColors1.jpg">
+                    <div class="mask flex-center rgba-blue-strong">
+                        <p class="white-text">
+                            Some colored houses with a great reflection near a shopping mall in the small Dutch city of Groningen.
+                        </p>
+                    </div>
+            </div>
+            <!--End Hover Description-->
+
+            <div class="card-title">
+                Groningen Kleuren
+            </div>
+        </div>
+        </div>
+        <!--End Groningen Panel-->
+
+        <!--Start Macau Panel-->
+        <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3 col-xl-3">
+            <div class="card" style="max-width: 100%; background-color: white; border: solid lightgray 1px;">
+
+                <!--Hover description-->
+                <div class="view overlay" id="MacauInfo">
+                    <img class="card-img-top img-fluid" id="Macau" src="../Images/MacauGreenTwist.jpg">
+                        <div class="mask flex-center rgba-blue-strong">
+                            <p class="white-text">
+                                A random apartment building in Macau taken in a vertical panorama style causing the edges to extrude a bit.
+                            </p>
+                        </div>
+                </div>
+                <!--End Hover Description-->
+
+                <div class="card-title">
+                    Green Twist
+                </div>
+            </div>
+        </div>
+        <!--End Macau Panel-->
+
+        <!--Start Crucifix Panel-->
+        <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3 col-xl-3">
+            <div class="card" style="max-width: 100%; background-color: white; border: solid lightgray 1px;">
+
+                <!--Hover description-->
+                <div class="view overlay" id="CrucifixInfo">
+                    <img class="card-img-top img-fluid" id="Crucifix" src="../Images/MacauFlyingCrucifix3.jpg">
+                        <div class="mask flex-center rgba-blue-strong">
+                            <p class="white-text">
+                                Another random apartment building shot from inside the courtyard in Macau.  The buildings above looked very interesting and seem to form a crucifix.
+                            </p>
+                        </div>
+                </div>
+                <!--End Hover Description-->
+
+                <div class="card-title">
+                    Flying Crucifix
+                </div>
+            </div>
+        </div>
+        <!--End Crucifix Panel-->
+
+        <!--Start Sand Dunes-->
+        <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3 col-xl-3">
+            <div class="card" style="max-width: 100%; background-color: white; border: solid lightgray 1px;">
+
+                <!--Hover description-->
+                <div class="view overlay" id="DunesInfo">
+                    <img class="card-img-top img-fluid" id="Dunes" src="../Images/COSandDunesBeerBackpack.jpg">
+                        <div class="mask flex-center rgba-blue-strong">
+                            <p class="white-text">
+                                A photo of my camera backpack with traveling beer at the Great Sand Dunes outside of Alamosa, Colorado.
+                            </p>
+                        </div>
+                </div>
+                <!--End Hover Description-->
+
+                <div class="card-title">
+                    Beer, Backpack, and Dunes
+                </div>
+            </div>
+        </div>
+        <!--End Dunes Panel-->
+    </div>
+    <!--End 3rd Row-->
 </div>
 
 
