--- a/views/photo.hbs
+++ b/views/photo.hbs
@@ -199,7 +199,7 @@
         <!--End Horseshoe Canyon Panel-->
 
         <!--Start Tron Panel-->
-        <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3 col-xl-3" style="margin-top: -290px">
+        <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3 col-xl-3" style="margin-top: -325px">
             <div class="card" style="max-width: 100%; background-color: white; border: solid lightgray 1px;">
 
                 <!--Hover description-->
@@ -221,7 +221,7 @@
         <!--End Tron Panel-->
 
         <!--Start Washing Machine-->
-        <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3 col-xl-3" style="margin-top: -290px">
+        <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3 col-xl-3" style="margin-top: -325px">
             <div class="card" style="max-width: 100%; background-color: white; border: solid lightgray 1px;">
 
                 <!--Hover description-->
@@ -246,7 +246,7 @@
 
     <!--Start 3rd row-->
     <div class="row">
-        <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3 col-xl-3">
+        <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3 col-xl-3" style="margin-top: -250px;">
 
         <!--Start Groningen Panel-->
         <div class="card" style="max-width: 100%; max-height: 100%; background-color: white; border: solid lightgray 1px;">
@@ -270,7 +270,7 @@
         <!--End Groningen Panel-->
 
         <!--Start Macau Panel-->
-        <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3 col-xl-3">
+        <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3 col-xl-3" style="margin-top: -50px;">
             <div class="card" style="max-width: 100%; background-color: white; border: solid lightgray 1px;">
 
                 <!--Hover description-->
@@ -292,7 +292,7 @@
         <!--End Macau Panel-->
 
         <!--Start Crucifix Panel-->
-        <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3 col-xl-3">
+        <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3 col-xl-3" style="margin-top: -385px;">
             <div class="card" style="max-width: 100%; background-color: white; border: solid lightgray 1px;">
 
                 <!--Hover description-->
@@ -314,7 +314,7 @@
         <!--End Crucifix Panel-->
 
         <!--Start Sand Dunes-->
-        <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3 col-xl-3">
+        <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3 col-xl-3" style="margin-top: -100px;">
             <div class="card" style="max-width: 100%; background-color: white; border: solid lightgray 1px;">
 
                 <!--Hover description-->
