added videos to video page

--- a/views/video.hbs
+++ b/views/video.hbs
@@ -58,8 +58,48 @@
 </nav>
 
 <!--End Navbar-->
+<div class="container-fluid">
+    <div class="row">
+
+        <!--Start Zhangjiajie Video Panel-->
+        <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4">  
+            <div class="card" style="max-width: 100%; background-color: white; border: solid lightgray 1px;"><a href="/video">
+                    <img class="card-img-top"><iframe style="width: -webkit-fill-available;" height="251px" src="https://www.youtube.com/watch?v=JAaR5Rurdf4" frameborder="10" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+                    <div class="card-title">
+                        <p id="card-text">Zhangjiajie National Forest Park by Drone</p>
+                    </div>
+            </div></a>
+        </div>
+        <!--End Zhangjiajie Video Panel-->
+
+        <!--Start Fullerton College Video Panel-->
+        <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4">
+            <!--Video Panel-->
+            <div class="card" style="max-width: 100%; background-color: white; border: solid lightgray 1px;"><a href="/video">
+                    <img class="card-img-top"><iframe style="width: -webkit-fill-available;" height="251px" src="https://www.youtube.com/embed/rEEGPJSIeHE" frameborder="10" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+                    <div class="card-title">
+                        <p id="card-text">Fullerton College Study Abroad Video</p>
+                    </div>
+            </div></a>
+        </div>
+        <!--End Full Coll Panel-->
+
+        <!--Start Dance Class Video-->
+        <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4">  
+            <div class="card" style="max-width: 100%; background-color: white; border: solid lightgray 1px;"><a href="/video">
+                    <img class="card-img-top"><iframe style="width: -webkit-fill-available;" height="251px" src="https://www.youtube.com/watch?v=2pFM2N1JNPw" frameborder="10" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+                    <div class="card-title">
+                        <p id="card-text">A video I made for the dance class at Fullerton College</p>
+                    </div>
+            </div></a>
+        </div>
 
 
+    </div>
+</div>
 
 
 
