--- a/views/video.hbs
+++ b/views/video.hbs
@@ -89,7 +89,7 @@
         <!--Start Dance Class Video-->
         <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4">  
             <div class="card" style="max-width: 100%; background-color: white; border: solid lightgray 1px;"><a href="/video">
-                    <img class="card-img-top"><iframe style="width: -webkit-fill-available;" height="251px" src="https://www.youtube.com/watch?v=2pFM2N1JNPw" frameborder="10" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <img class="card-img-top"><iframe width="560" height="315" src="https://www.youtube.com/embed/2pFM2N1JNPw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
                     <div class="card-title">
                         <p id="card-text">A video I made for the dance class at Fullerton College</p>
