added another row of videos

--- a/views/video.hbs
+++ b/views/video.hbs
@@ -96,9 +96,40 @@
                     </div>
             </div></a>
         </div>
-
-
     </div>
+    <div class="row">
+        <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4">  
+            <div class="card" style="max-width: 100%; background-color: white; border: solid lightgray 1px;"><a href="/video">
+                    <img class="card-img-top"><iframe style="width: -webkit-fill-available;" height="251px" src="https://www.youtube.com/embed/z7KHWpZpYDo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+                    <div class="card-title">
+                        <p id="card-text">Bier Drei - UCSD German Class Project</p>
+                    </div>
+            </div></a>
+        </div>
+
+        <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4">  
+            <div class="card" style="max-width: 100%; background-color: white; border: solid lightgray 1px;"><a href="/video">
+                    <img class="card-img-top"><iframe style="width: -webkit-fill-available;" height="251px" src="https://www.youtube.com/embed/Q2_wPRxTdUo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+                    <div class="card-title">
+                        <p id="card-text">Euro College: Paris Study Abroad 2012 Introduction</p>
+                    </div>
+            </div></a>
+        </div>
+    
+        <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4">  
+            <div class="card" style="max-width: 100%; background-color: white; border: solid lightgray 1px;"><a href="/video">
+                    <img class="card-img-top"><iframe style="width: -webkit-fill-available;" height="251px" src="https://www.youtube.com/embed/1kc-M1j0bS8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+                    <div class="card-title">
+                        <p id="card-text">Fear and Loathing in Las Vegas Project</p>
+                    </div>
+            </div></a>
+        </div>
+    </div>
+
+    
 </div>
 
 
