added another row of videos

--- a/views/video.hbs
+++ b/views/video.hbs
@@ -59,7 +59,7 @@
 
 <!--End Navbar-->
 <div class="container-fluid">
-    <div class="row">
+    <div class="row" style="margin-bottom: 60px;">
 
         <!--Start Zhangjiajie Video Panel-->
         <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4">  
@@ -92,7 +92,7 @@
                     <img class="card-img-top"><iframe style="width:-webkit-fill-available;" height="251px" src="https://www.youtube.com/embed/2pFM2N1JNPw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
                     <div class="card-title">
-                        <p id="card-text">Fullerton College Dance Video</p>
+                        <p id="card-text">Fullerton College Dance Class Video</p>
                     </div>
             </div></a>
         </div>
