changed captions a bit

--- a/views/video.hbs
+++ b/views/video.hbs
@@ -67,7 +67,7 @@
                     <img class="card-img-top"><iframe style="width: -webkit-fill-available" height="251px" src="https://www.youtube.com/embed/JAaR5Rurdf4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
                     <div class="card-title">
-                        <p id="card-text">Zhangjiajie National Forest Park by Drone</p>
+                        <p id="card-text">Zhangjiajie National Forest Park by Drone (2016)</p>
                     </div>
             </div></a>
         </div>
@@ -80,7 +80,7 @@
                     <img class="card-img-top"><iframe style="width: -webkit-fill-available;" height="251px" src="https://www.youtube.com/embed/rEEGPJSIeHE" frameborder="10" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
                     <div class="card-title">
-                        <p id="card-text">Fullerton College Study Abroad Video</p>
+                        <p id="card-text">Fullerton College Study Abroad Video (Berlin 2011)</p>
                     </div>
             </div></a>
         </div>
@@ -92,7 +92,7 @@
                     <img class="card-img-top"><iframe style="width:-webkit-fill-available;" height="251px" src="https://www.youtube.com/embed/2pFM2N1JNPw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
                     <div class="card-title">
-                        <p id="card-text">Fullerton College Dance Class Video</p>
+                        <p id="card-text">Fullerton College Dance Class Video (2010)</p>
                     </div>
             </div></a>
         </div>
@@ -103,7 +103,7 @@
                     <img class="card-img-top"><iframe style="width: -webkit-fill-available;" height="251px" src="https://www.youtube.com/embed/z7KHWpZpYDo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
                     <div class="card-title">
-                        <p id="card-text">Bier Drei - UCSD German Class Project</p>
+                        <p id="card-text">Bier Drei - UCSD German Class Project (2014)</p>
                     </div>
             </div></a>
         </div>
@@ -113,7 +113,7 @@
                     <img class="card-img-top"><iframe style="width: -webkit-fill-available;" height="251px" src="https://www.youtube.com/embed/Q2_wPRxTdUo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
                     <div class="card-title">
-                        <p id="card-text">Euro College: Paris Study Abroad 2012 Introduction</p>
+                        <p id="card-text">Euro College: Paris Study Abroad Introduction (2012)</p>
                     </div>
             </div></a>
         </div>
@@ -123,7 +123,7 @@
                     <img class="card-img-top"><iframe style="width: -webkit-fill-available;" height="251px" src="https://www.youtube.com/embed/1kc-M1j0bS8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
                     <div class="card-title">
-                        <p id="card-text">Fear and Loathing in Las Vegas Project</p>
+                        <p id="card-text">Fear and Loathing in Las Vegas Project (2010)</p>
                     </div>
             </div></a>
         </div>
