adding panels to skills page

--- a/views/skills.hbs
+++ b/views/skills.hbs
@@ -53,12 +53,18 @@
         <li class="nav-item list-item-inline">
             <a class="nav-link" href="/about">About</a>
         </li>
-    </ul>
-    
+    </ul> 
 </nav>
-
 <!--End Navbar-->
-
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2 col-xl-2">
+            <div class="card" style="max-width: 100%; background-color: white; border: solid lightgray 1px;">
+                <img class="card-img-top img-fluid" src="../Images/html.png"> 
+            </div>
+        </div>
+    </div>
+</div>
 
 
 
