finished first row on skills page

--- a/views/skills.hbs
+++ b/views/skills.hbs
@@ -63,6 +63,31 @@
                 <img class="card-img-top img-fluid" src="../Images/html.png"> 
             </div>
         </div>
+        <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2 col-xl-2">
+            <div class="card" style="max-width: 100%; background-color: white; border: solid lightgray 1px;">
+                <img class="card-img-top img-fluid" src="../Images/cssicon.png"> 
+            </div>
+        </div>
+        <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2 col-xl-2">
+            <div class="card" style="max-width: 100%; background-color: white; border: solid lightgray 1px;">
+                <img class="card-img-top img-fluid" src="../Images/javascripticon.png"> 
+            </div>
+        </div>
+        <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2 col-xl-2">
+            <div class="card" style="max-width: 100%; background-color: white; border: solid lightgray 1px;">
+                <img class="card-img-top img-fluid" src="../Images/jqueryicon.jpg"> 
+            </div>
+        </div>
+        <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2 col-xl-2">
+            <div class="card" style="max-width: 100%; background-color: white; border: solid lightgray 1px;">
+                <img class="card-img-top img-fluid" src="../Images/mysqlicon.png"> 
+            </div>
+        </div>
+        <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2 col-xl-2">
+            <div class="card" style="max-width: 100%; background-color: white; border: solid lightgray 1px;">
+                <img class="card-img-top img-fluid" src="../Images/sequelizeicon.png"> 
+            </div>
+        </div>
     </div>
 </div>
 
