--- a/views/skills.hbs
+++ b/views/skills.hbs
@@ -56,7 +56,7 @@
     </ul> 
 </nav>
 <!--End Navbar-->
-<div class="container-fluid">
+<div class="container-fluid" style="margin-top: 0px;">
     <div class="row">
         <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2 col-xl-2">
             <div class="card" style="max-width: 100%; background-color: white; border: solid lightgray 1px;">
@@ -65,7 +65,7 @@
         </div>
         <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2 col-xl-2">
             <div class="card" style="max-width: 100%; background-color: white; border: solid lightgray 1px;">
-                <img class="card-img-top img-fluid" src="../Images/cssicon.png"> 
+                <img class="card-img-top img-fluid" src="../Images/cssicon2.png"> 
             </div>
         </div>
         <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2 col-xl-2">
