added second row of adobe icons

--- a/views/skills.hbs
+++ b/views/skills.hbs
@@ -89,6 +89,28 @@
             </div>
         </div>
     </div>
+    <div class="row">
+        <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3 col-xl-3">
+            <div class="card" style="max-width: 100%; background-color: white; border: solid lightgray 1px;">
+                <img class="card-img-top img-fluid" src="../Images/illustratoricon.png">
+            </div> 
+        </div>
+        <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3 col-xl-3">
+            <div class="card" style="max-width: 100%; background-color: white; border: solid lightgray 1px;">
+                <img class="card-img-top img-fluid" src="../Images/photoshopicon.png">
+            </div> 
+        </div>
+        <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3 col-xl-3">
+            <div class="card" style="max-width: 100%; background-color: white; border: solid lightgray 1px;">
+                <img class="card-img-top img-fluid" src="../Images/premiereicon.png">
+            </div> 
+        </div>
+        <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3 col-xl-3">
+            <div class="card" style="max-width: 100%; background-color: white; border: solid lightgray 1px;">
+                <img class="card-img-top img-fluid" src="../Images/aftereffectsicon.png">
+            </div> 
+        </div>
+    </div>
 </div>
 
 
