added second row of adobe icons

--- a/views/skills.hbs
+++ b/views/skills.hbs
@@ -57,7 +57,7 @@
 </nav>
 <!--End Navbar-->
 <div class="container-fluid" style="margin-top: 0px;">
-    <div class="row">
+    <div class="row" style="max-height: 220px;">
         <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2 col-xl-2">
             <div class="card" style="max-width: 100%; background-color: white; border: solid lightgray 1px;">
                 <img class="card-img-top img-fluid" src="../Images/html.png"> 
@@ -92,7 +92,7 @@
     <div class="row">
         <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3 col-xl-3">
             <div class="card" style="max-width: 100%; background-color: white; border: solid lightgray 1px;">
-                <img class="card-img-top img-fluid" src="../Images/illustratoricon.png">
+                <img class="card-img-top img-fluid" src="../Images/illustratoricon.jpg">
             </div> 
         </div>
         <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3 col-xl-3">
