added third row

--- a/views/skills.hbs
+++ b/views/skills.hbs
@@ -111,6 +111,38 @@
             </div> 
         </div>
     </div>
+    <div class="row" style="max-height: 220px;">
+        <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2 col-xl-2">
+            <div class="card" style="max-width: 100%; background-color: white; border: solid lightgray 1px;">
+                <img class="card-img-top img-fluid" src="../Images/ExpressJSicon.png"> 
+            </div>
+        </div>
+        <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2 col-xl-2">
+            <div class="card" style="max-width: 100%; background-color: white; border: solid lightgray 1px;">
+                <img class="card-img-top img-fluid" src="../Images/reacticon.png"> 
+            </div>
+        </div>
+        <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2 col-xl-2">
+            <div class="card" style="max-width: 100%; background-color: white; border: solid lightgray 1px;">
+                <img class="card-img-top img-fluid" src="../Images/javaicon.jpg"> 
+            </div>
+        </div>
+        <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2 col-xl-2">
+            <div class="card" style="max-width: 100%; background-color: white; border: solid lightgray 1px;">
+                <img class="card-img-top img-fluid" src="../Images/firebaseicon.jpg"> 
+            </div>
+        </div>
+        <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2 col-xl-2">
+            <div class="card" style="max-width: 100%; background-color: white; border: solid lightgray 1px;">
+                <img class="card-img-top img-fluid" src="../Images/phpicon.png"> 
+            </div>
+        </div>
+        <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2 col-xl-2">
+            <div class="card" style="max-width: 100%; background-color: white; border: solid lightgray 1px;">
+                <img class="card-img-top img-fluid" src="../Images/nodeicon.png"> 
+            </div>
+        </div>
+    </div>
 </div>
 
 
