added fourth row

--- a/views/skills.hbs
+++ b/views/skills.hbs
@@ -143,6 +143,39 @@
             </div>
         </div>
     </div>
+
+    <div class="row" style="max-height: 220px;">
+        <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2 col-xl-2">
+            <div class="card" style="max-width: 100%; background-color: white; border: solid lightgray 1px;">
+                <img class="card-img-top img-fluid" src="../Images/pythonicon.png"> 
+            </div>
+        </div>
+        <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2 col-xl-2">
+            <div class="card" style="max-width: 100%; background-color: white; border: solid lightgray 1px;">
+                <img class="card-img-top img-fluid" src="../Images/rubyonrails.png"> 
+            </div>
+        </div>
+        <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2 col-xl-2">
+            <div class="card" style="max-width: 100%; background-color: white; border: solid lightgray 1px;">
+                <img class="card-img-top img-fluid" src="../Images/sassicon.png"> 
+            </div>
+        </div>
+        <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2 col-xl-2">
+            <div class="card" style="max-width: 100%; background-color: white; border: solid lightgray 1px;">
+                <img class="card-img-top img-fluid" src="../Images/handlebarsicon.png"> 
+            </div>
+        </div>
+        <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2 col-xl-2">
+            <div class="card" style="max-width: 100%; background-color: white; border: solid lightgray 1px;">
+                <img class="card-img-top img-fluid" src="../Images/mongodbicon.jpg"> 
+            </div>
+        </div>
+        <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2 col-xl-2">
+            <div class="card" style="max-width: 100%; background-color: white; border: solid lightgray 1px;">
+                <img class="card-img-top img-fluid" src="../Images/lessicon.jpg"> 
+            </div>
+        </div>
+    </div>
 </div>
 
 
