added fourth row

--- a/views/skills.hbs
+++ b/views/skills.hbs
@@ -152,7 +152,7 @@
         </div>
         <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2 col-xl-2">
             <div class="card" style="max-width: 100%; background-color: white; border: solid lightgray 1px;">
-                <img class="card-img-top img-fluid" src="../Images/rubyonrails.png"> 
+                <img class="card-img-top img-fluid" src="../Images/rubyonrailsicon.png"> 
             </div>
         </div>
         <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2 col-xl-2">
