working on contact form and sending

--- a/views/contact.hbs
+++ b/views/contact.hbs
@@ -66,15 +66,15 @@
                 <div class="panel panel-body">
 
                     <!-- Form contact -->
-                    <form action="mailto:ewill2020@gmail.com" method="post" enctype="text/plain">
+                    <form action="MAILTO:ewill2020@gmail.com" method="post" enctype="text/plain">
                         <div class="form-group">
-                            <label for="form3">Your name</label><i class="far fa-user"></i>
+                            <label for="form3">Your Name</label><i class="far fa-user"></i>
                             <input type="text" id="form3" class="form-control">
 
                         </div>
 
                         <div class="form-group">
-                            <label for="form2">Your email</label><i class="far fa-envelope"></i>
+                            <label for="form2">Your Email</label><i class="far fa-envelope"></i>
 
                             <input type="text" id="form2" class="form-control">
 
@@ -86,14 +86,14 @@
                         </div>
 
                         <div class="form-group">
-                            <label for="form8">Your message</label><i class="fas fa-pencil-alt"></i>
+                            <label for="form8">Your Message</label><i class="fas fa-pencil-alt"></i>
                             <br>
                             <textarea type="text" id="form8" class="md-textarea" style="height: 100px"></textarea>
 
                         </div>
 
                         <div class="send">
-                            <button type="submit" class="btn btn-default">Send <span><i class="fab fa-telegram-plane"></i></span></button>
+                            <button type="submit" class="btn btn-info">Send</button>
                         </div>
 
                     </form>
