working with email form on contact page

--- a/views/contact.hbs
+++ b/views/contact.hbs
@@ -68,27 +68,27 @@
                     <!-- Form contact -->
                     <form action="MAILTO:ewill2020@gmail.com" method="post" enctype="text/plain">
                         <div class="form-group">
-                            <label for="form3">Your Name</label><i class="far fa-user"></i>
-                            <input type="text" id="form3" class="form-control">
+                            <label for="form3">Your Name</label>
+                            <input type="text" name="name" id="form3" class="form-control">
 
                         </div>
 
                         <div class="form-group">
-                            <label for="form2">Your Email</label><i class="far fa-envelope"></i>
+                            <label for="form2">Your Email</label>
 
-                            <input type="text" id="form2" class="form-control">
+                            <input type="text" id="form2" name="mail" class="form-control">
 
                         </div>
 
                         <div class="form-group">
-                            <label for="form34">Subject</label><i class="fas fa-tag"></i>
+                            <label for="form34">Subject</label>
                             <input type="text" id="form32" class="form-control">
                         </div>
 
                         <div class="form-group">
-                            <label for="form8">Your Message</label><i class="fas fa-pencil-alt"></i>
+                            <label for="form8">Your Message</label>
                             <br>
-                            <textarea type="text" id="form8" class="md-textarea" style="height: 100px"></textarea>
+                            <textarea type="text" id="form8" name="message" class="md-textarea" style="height: 100px"></textarea>
 
                         </div>
 
