contact panel header

--- a/views/contact.hbs
+++ b/views/contact.hbs
@@ -62,7 +62,7 @@
         <!-- <div class="row main-content"> -->
         <div class="col-xs-12 col-sm-12 col-md-8 col-md-offset-1 col-lg-5 col-lg-offset-1">
             <div class="panel panel-default" style="background-color: white; border: solid lightgray 1px;">
-                <div class="panel panel-header text-center">Contact<i class="glyphicon glyphicon-envelope"></i></div>
+                <div class="panel panel-header text-center" style="color: #00b8e6;">Contact<i class="glyphicon glyphicon-envelope"></i></div>
                 <div class="panel panel-body">
 
                     <!-- Form contact -->
