--- a/views/home.hbs
+++ b/views/home.hbs
@@ -40,6 +40,15 @@
             </a>
         </li>
     </ul>
+    <!-- Language Links -->
+    <ul class="navbar-nav mr-auto navbar-right list-inline" style="margin-left: 30px;">
+        <li class="nav-item list-item-inline">
+            <a class="nav-link flag-icon-FR" href="/homeFR"></a>
+        </li>
+        <li class="nav-item list-item-inline">
+            <a class="nav-link flag-icon-DE" href="/homeDE"></a>
+        </li>
+    </ul>
     <!-- Links -->
     <ul class="navbar-nav mr-auto navbar-right list-inline" style="margin-left: 30px;">
         <li class="nav-item list-item-inline">
