added foreign language pages and fixed the flag icons

--- a/views/contactFR.hbs
+++ b/views/contactFR.hbs
@@ -42,10 +42,10 @@
     <!-- Language Links -->
     <ul class="navbar-nav mr-auto navbar-right list-inline" style="margin-left: 30px;">
         <li class="nav-item list-item-inline">
-            <a class="nav-link flag-icon-US" href="/home"></a>
+            <a class="nav-link"><span class="flag-icon flag-icon-us" href="/home"></span></a>
         </li>
         <li class="nav-item list-item-inline">
-            <a class="nav-link flag-icon-DE" href="/homeDE"></a>
+            <a class="nav-link"><span class="flag-icon flag-icon-de" href="/homeDE"></span></a>
         </li>
     </ul>
         <!-- Links -->
