--- a/views/homeDE.hbs
+++ b/views/homeDE.hbs
@@ -43,10 +43,10 @@
     <!--Language Links-->
     <ul class="navbar-nav mr-auto navbar-right list-inline" style="margin-left: 30px;">
         <li class="nav-item list-item-inline">
-            <a class="nav-link flag-icon-US" href="/home"></a>
+            <a class="nav-link"><span class="flag-icon flag-icon-us" href="/home"></span></a>
         </li>
         <li class="nav-item list-item-inline">
-            <a class="nav-link flag-icon-FR" href="/homeFR"></a>
+            <a class="nav-link"><span class="flag-icon flag-icon-fr" href="/homeFR"></span></a>
         </li>
     </ul>
     <!-- Links -->
@@ -55,10 +55,10 @@
             <a class="nav-link glyphicon glyphicon-home" href="/home"></a>
         </li>
         <li class="nav-item list-item-inline">
-            <a class="nav-link glyphicon glyphicon-envelope" href="/contactDE">Kontakte</a>
+            <a class="nav-link glyphicon glyphicon-envelope" href="/contactDE"></a>
         </li>
         <li class="nav-item list-item-inline">
-            <a class="nav-link glyphicon glyphicon-book" href="/aboutDE">Biografie</a>
+            <a class="nav-link glyphicon glyphicon-book" href="/aboutDE"></a>
         </li>
     </ul>
 </nav>
