--- a/views/home.hbs
+++ b/views/home.hbs
@@ -43,10 +43,10 @@
     <!-- Language Links -->
     <ul class="navbar-nav mr-auto navbar-right list-inline" style="margin-left: 30px;">
         <li class="nav-item list-item-inline">
-            <a class="nav-link flag-icon-FR" href="/homeFR"></a>
+            <a class="nav-link flag-icon-fr" href="/homeFR"></a>
         </li>
         <li class="nav-item list-item-inline">
-            <a class="nav-link flag-icon-DE" href="/homeDE"></a>
+            <a class="nav-link flag-icon-de" href="/homeDE"></a>
         </li>
     </ul>
     <!-- Links -->
