--- a/views/homeFR.hbs
+++ b/views/homeFR.hbs
@@ -43,10 +43,10 @@
     <!-- Language Links -->
     <ul class="navbar-nav mr-auto navbar-right list-inline" style="margin-left: 30px;">
         <li class="nav-item list-item-inline">
-            <a class="nav-link flag-icon-US" href="/home"></a>
+            <a class="nav-link"><span class="flag-icon flag-icon-us" href="/home"></span></a>
         </li>
         <li class="nav-item list-item-inline">
-            <a class="nav-link flag-icon-DE" href="/homeDE"></a>
+            <a class="nav-link"><span class="flag-icon flag-icon-de" href="/homeDE"></span></a>
         </li>
     </ul>
     <!-- Basic Nav Links -->
@@ -55,10 +55,10 @@
             <a class="nav-link glyphicon glyphicon-home" href="/homeFR"></a>
         </li>
         <li class="nav-item list-item-inline">
-            <a class="nav-link glyphicon glyphicon-envelope" href="/contactFR">Se contact</a>
+            <a class="nav-link glyphicon glyphicon-envelope" href="/contactFR"></a>
         </li>
         <li class="nav-item list-item-inline">
-            <a class="nav-link glyphicon glyphicon-book" href="/aboutFR">À propos de moi</a>
+            <a class="nav-link glyphicon glyphicon-book" href="/aboutFR"></a>
         </li>
     </ul>
 </nav>
