--- a/views/webPort.hbs
+++ b/views/webPort.hbs
@@ -40,7 +40,15 @@
             </a>
         </li>
     </ul>
-
+    <!-- Language Links -->
+    <ul class="navbar-nav mr-auto navbar-right list-inline" style="margin-left: 30px;">
+        <li class="nav-item list-item-inline">
+            <a class="nav-link flag-icon-fr" href="/webPortFR"></a>
+        </li>
+        <li class="nav-item list-item-inline">
+            <a class="nav-link flag-icon-de" href="/webPortDE"></a>
+        </li>
+    </ul>
     <!-- Links -->
     <ul class="navbar-nav mr-auto navbar-right list-inline" style="margin-left: 30px;">
         <li class="nav-item list-item-inline">
